--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   </head>
   <!-- 3. Display the application -->
   <body>
-    <my-app>Loading...</my-app>
+    <my-app>Loading leave app...</my-app>
   </body>
 </html>
 
